fix: redundant gap in section help

--- a/src/scss/settings/help.scss
+++ b/src/scss/settings/help.scss
@@ -1,3 +1,7 @@
+.section_help {
+    margin-bottom: 0;
+}
+
 .section_help:not(:empty) {
     margin: $section_padding $section_padding 0 $section_padding;
 }
